Version 1.13.0-dev:
 * Add-ons client:
   * The Update All button is now displayed on all Add-on Manager views instead
     of just the Upgradable filter view, and enabled only when there is at
     least one add-on that may be upgraded.
 * Add-ons server:
   * Add-on metadata pattern blacklisting implemented.
   * Major internal refactoring done.
 * AI:
   * New Micro AI: Fast AI
   * Messenger Escort Micro AI: new optional parameters [filter],
     [filter_second] and invert_order=
   * Coward Micro AI: new optional key attack_if_trapped=
   * Stationed Guardian Micro AI: make guard_x/y= optional keys
   * Stationed Guardian Micro AI: bug fix for unreachable stations
   * Messenger Escort Micro AI: bug fix for escort units blocking messenger's
     progress
   * Lurkers Micro AI: fix bug in wander terrain selection
   * Several Micro AIs: fix a variety of rarely occurring but serious bugs, such
     as invalid savegames or disabling the AI from working for the rest of the
     turn or after changing the Micro AI settings.
   * Bug fix for requiring unnecessary keys for removal of several Micro AIs
   * Fixed a bug that made it impossible to change or delete Micro AIs after a
     game had been reloaded (bug #21750). This was a general bug in the RCA AI
     mechanism and applied to other CAs as well, but it was most visible in the
     Micro AIs.
   * Some internal reorganization of Micro AI code to facilitate customizing
     them for UMC and adding functionality from other versions of Wesnoth. Some
     code cleanup for consistency, readability and speed, as well as fixing of
     some minor and subtle bugs.
   * Fix bug in Random Recruit Micro AI: the AI can now handle custom castle
     terrain independent of its terrain code
   * Fix bug in Return Guardian and Goto Micro AIs when there is no path to
     the goal hex
   * Several fixes of translatable strings in Micro AIs
   * Micro AIs: only display on-screen error messages when in debug mode
 * Campaigns: