@@ -8,6 +8,8 @@ Version 1.13.0-dev:
    * Major internal refactoring done.
  * AI:
    * New Micro AI: Fast AI
+   * Big Animals Micro AI: bug fix for units not attacking when [avoid_unit] is
+     not set
    * Messenger Escort Micro AI: new optional parameters [filter],
      [filter_second] and invert_order=
    * Coward Micro AI: new optional key attack_if_trapped=
